fix: Update contact content styles for enhanced layout and readability

--- a/src/index.css
+++ b/src/index.css
@@ -867,7 +867,7 @@ body {
     width: 390px;
     height: 280px;
     position: relative;
-    top: -75px;
+    top: -85px;
   }
 
   .contact-page .title h2 {
@@ -879,7 +879,7 @@ body {
   }
   .contact-content {
     padding: 10px 0px 0px 20px;
-    margin-top: -20px;
+    margin-top: -40px;
   }
 
   .contact-content p a {
